service-mesh/app/helloservice-client.yml

kind: Deployment
apiVersion: apps/v1
metadata:
  name: hello-service-client
  labels:
    app: hello-service-client
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-service-client
  template:
    metadata:
      labels:
        app: hello-service-client
      annotations:
        'consul.hashicorp.com/connect-inject': 'true'
        'consul.hashicorp.com/connect-service': 'hello-service-client'
    spec:
      volumes:
        - name: application-config
          configMap:
            name: hello-service-client
      containers:
        - name: application
          image: mrflick72/consule-spike_hello-service-client:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /usr/local/hello-service-client/application.yml
              subPath: application.yml
              name: application-config
---

apiVersion: v1
kind: Service
metadata:
  name: hello-service-client
  labels:
    app: hello-service-client
spec:
  selector:
    app: hello-service-client
  ports:
    - port: 8080

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-service-client
  labels:
    app: hello-service-client
spec:
  rules:
    - http:
        paths:
          - path: /hello-service-client
            pathType: Prefix
            backend:
              service:
                name: hello-service-client
                port:
                  number: 8080
