service-mesh/app/helloservice.yml

kind: Deployment
apiVersion: apps/v1
metadata:
  name: hello-service
  labels:
    app: hello-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-service
  template:
    metadata:
      labels:
        app: hello-service
      annotations:
        'consul.hashicorp.com/connect-inject': 'true'
        'consul.hashicorp.com/connect-service': 'hello-service'
    spec:
      volumes:
        - name: application-config
          configMap:
            name: hello-service
      containers:
        - name: hello-service
          image: mrflick72/consule-spike_hello-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /usr/local/hello-service/bootstrap.yml
              subPath: bootstrap.yml
              name: application-config
---

apiVersion: v1
kind: Service
metadata:
  name: hello-service
  labels:
    app: hello-service
spec:
  selector:
    app: hello-service
  ports:
    - port: 8080

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-service
  labels:
    app: hello-service
spec:
  rules:
    - http:
        paths:
          - path: /hello-service
            pathType: Prefix
            backend:
              service:
                name: hello-service
                port:
                  number: 8080
